--- a/Price Navigator/src/ui/Main/MarketHarmonix.form
+++ b/Price Navigator/src/ui/Main/MarketHarmonix.form
@@ -214,7 +214,7 @@
                   <Font name="Helvetica Neue" size="36" style="1"/>
                 </Property>
                 <Property name="horizontalAlignment" type="int" value="0"/>
-                <Property name="text" type="java.lang.String" value="Market Harmonix"/>
+                <Property name="text" type="java.lang.String" value="Price Navigator"/>
               </Properties>
               <Constraints>
                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignCardLayout" value="org.netbeans.modules.form.compat2.layouts.DesignCardLayout$CardConstraintsDescription">
