--- a/Price Navigator/src/ui/Main/SignUp/LogoutJPanel.form
+++ b/Price Navigator/src/ui/Main/SignUp/LogoutJPanel.form
@@ -32,7 +32,7 @@
           <Color blue="ff" green="cc" red="0" type="rgb"/>
         </Property>
         <Property name="horizontalAlignment" type="int" value="0"/>
-        <Property name="text" type="java.lang.String" value="MarketHarmonix"/>
+        <Property name="text" type="java.lang.String" value="Price Navigator"/>
       </Properties>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
